--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -40,7 +40,7 @@
                         <form action="/zip-code">
                             <label name="your-zip-code">Your zip code: </label>
                             <br>
-                            <input class="form-control" type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}"
+                            <input class="form-control user-field" type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}"
                                 maxlength="5" style="border-radius: 5px">
 
                             <text name="zip-user-input" id="zip-user-input"></text>
