--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -4,15 +4,28 @@
 
 {% block content %}
 
-<div class="subpage-header">
+<div class="cover-container d-flex h-100 mx-auto flex-column">
+
+
+    <div class="bg-image d-flex justify-content-center align-items-center" style="
+background-image: url('static/images/color empty living room.jpeg');
+height: 30vh; background-size: cover;
+">
+
+</div>
+</div>
+
+<div class="row subpage-header">
+    
     <h1>Where Are They Now?</h1>
 </div>
-<br>
-<br>
+
 <div class="container">
     <div class="float-right">
         <div class="row watn-description">
             <div class="col-sm-7">
+                <br>
+                <br>
             <p>We love Seinfeld the show. Its final episode was in 1998, but that doesn't
                 mean the actors are sitting around doing more nothing. Some of them post on
                 Twitter. Check out their most recent tweets.</p>
@@ -25,21 +38,21 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: #4f6d7a">
-                                    <em><strong>@JerrySeinfeld</strong></em>
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: #4f6d7a; font-weight: bold;">
+                                    <em>@JerrySeinfeld</em>
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    {% for i in range(jerry_tweet_ids|length) %}
+                                    <!-- {% for i in range(jerry_tweet_ids|length) %}
                             <blockquote class="twitter-tweet">
                                 <a href="https://twitter.com/{{ jerry_twitter_handle }}/status/{{ jerry_tweet_ids[i] }}">
                                 </a>
                                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                 </script>
                             </blockquote> 
-                            {% endfor %} 
+                            {% endfor %}  -->
                                 </div>
                             </div>
                         </div>
@@ -48,22 +61,22 @@
                         <div class="accordion-item julia-twitter">
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: #4f6d7a">
-                                    @
+                                    data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: #4f6d7a; font-weight: bold;">
+                                    @OfficialJLD
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
 
-                                    {% for i in range(julia_tweet_ids|length) %}
+                                    <!-- {% for i in range(julia_tweet_ids|length) %}
                                 <blockquote class="twitter-tweet">
                                     <a href="https://twitter.com/{{ julia_twitter_handle }}/status/{{ julia_tweet_ids[i] }}">
                                     </a>
                                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                     </script>
                                 </blockquote> 
-                                {% endfor %}                        
+                                {% endfor %}                         -->
                                 </div>
                             </div>
                         </div>
@@ -73,21 +86,21 @@
                                 <div class="accordion-item jason-twitter">
                                     <h2 class="accordion-header" id="headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" style="color: #4f6d7a">
-                                            Jason Alexander as 'George' on 'Seinfeld'
+                                            data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" style="color: #4f6d7a; font-weight: bold;">
+                                            @IJasonAlexander
                                         </button>
                                     </h2>
                                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            {% for i in range(jason_tweet_ids|length) %}
+                                            <!-- {% for i in range(jason_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ jason_twitter_handle }}/status/{{ jason_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                        {% endfor %}
+                                        {% endfor %} -->
                                         </div>
                                     </div>
                                 </div>
@@ -96,21 +109,21 @@
                                 <div class="accordion-item modern-twitter">
                                     <h2 class="accordion-header" id="headingFour">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" style="color: #4f6d7a">
-                                            Bonus: A take on how episodes might have gone in the 2010's
+                                            data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" style="color: #4f6d7a; font-weight: bold;">
+                                            @Modern_Seinfeld
                                         </button>
                                     </h2>
                                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            {% for i in range(modern_tweet_ids|length) %}
+                                            <!-- {% for i in range(modern_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ modern_twitter_handle }}/status/{{ modern_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                    {% endfor %}
+                                    {% endfor %} -->
                                         </div>
                                     </div>
                                 </div>
