Text header watn over jumbotron image

--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -3,23 +3,25 @@
 <title>{% block title %}Where Are They Now?{% endblock %}</title>
 
 {% block content %}
+<div class="text-left">
+    <div class="cover-container d-flex h-100 mx-auto flex-column">
 
-<div class="cover-container d-flex h-100 mx-auto flex-column">
+
+        <div class="bg-image d-flex align-items-center" style="
+    background-image: url('static/images/color empty living room.jpeg');
+    height: 30vh; background-size: cover;
+    ">
 
 
-    <div class="bg-image d-flex justify-content-center align-items-center" style="
-background-image: url('static/images/color empty living room.jpeg');
-height: 30vh; background-size: cover;
-">
 
+    <div class="row">
+        <div class="watn-subheader">
+        <h1>Where Are They Now?</h1>
+    </div>
+    </div>
 </div>
+    </div>
 </div>
-
-<div class="row subpage-header">
-    
-    <h1>Where Are They Now?</h1>
-</div>
-
 <div class="container">
     <div class="float-right">
         <div class="row watn-description">
@@ -34,6 +36,7 @@ height: 30vh; background-size: cover;
         <div class="accordion" id="accordionExample">
             <div class="container">
                 <div class="row">
+                    <div class="row">
                     <div class="col-sm-6">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
@@ -57,6 +60,7 @@ height: 30vh; background-size: cover;
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-sm-6">
                         <div class="accordion-item julia-twitter">
                             <h2 class="accordion-header" id="headingTwo">
