--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,278 +4,306 @@ body {
     color: #5a5a5a;
   }
   
-  html body {
-    background-color: #c0d6df;
-  }
-  /* CUSTOMIZE THE CAROUSEL
-  -------------------------------------------------- */
-  
-  /* Carousel base class */
-  .carousel {
-    margin-bottom: 4rem;
-  }
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    bottom: 3rem;
-    z-index: 10;
-  }
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 36rem;
-    background-color: #777;
-  }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem;
-  }
-  
-  #no-stretch {
-    height: 100%;
-    width: 100%;
-    opacity: .8;
-  }
-
-  .message-font {
-    font-family: Menlo;
-  }
-
-  #sam-font-2 {
-    font-family: 'streamster';
-    font-size: 5em;
-    color: white;
-    text-shadow: 2px 2px 5px #e3c505;
-    letter-spacing: .02em;
-  }
-
-  .subpage-header {
-    font-family: 'streamster';
-    font-size: 4em;
-    margin-top: 100px !important;
-    margin-left: 50px !important;
-  }
-
-  #festivus-tagline {
-    color: white !important;
-    font-size: 1.5em !important;
-    opacity: .7;
-  }
-
-  h1 {
-    font-size: 1.5em;
-    margin-top: 50px;
-    letter-spacing: .012em;
-    text-shadow: 2px 2px 5px #4f6d7a;
-  }
-
-  h2 {
-    color: #4f6d7a;
-  }
-
-  .navbar-brand {
-    margin-left: 10px !important;
-    font-family: 'streamster' !important;
-    font-size: 1.75em;
-    color: #4f6d7a !important;
-    letter-spacing: .06em;
-    text-shadow: 2px 2px 5px #e3c505;
-  }
-
-  input:placeholder-shown {
-    font-style: italic;
- }
-
- .user-field, .form-select {
-   opacity: .7;
- }
-
-  #accordionExample {
-    background-color: transparent !important;
-  }
-
-  .navbar {
-    box-shadow: 0 2px 40px 0 rgb(0 0 0 / 30%);
-  }
-
-  .hp-button, #zip-button, #end-convo, #bot-chat-submit-button {
-    background-color: #4f6d7a;
-    color: white;
-  }
-
-  .watn-description {
-    padding-left: 50px;
-  }
-
-  a:hover {
-    color:#e3c505;
-  }
-
-  .btn:hover, #zip-button:hover, #end-convo:hover, #bot-chat-submit-button:hover, .navbar:hover {
-    background-color:#e3c505;
-    color: white;
-  }
-
-  #festivus-btn {
-
-    font-weight: bold;
-  }
-
-  #festivus-btn:hover {
-    color: #dd6e42;
-  }
-  
-  .navbar-brand:hover, .accordion-button:hover {
-    color:#e3c505 !important;
-  }
-  
-  .navbar-dark:hover .navbar-nav:hover .nav-link:hover {
-    color:#e3c505;
-  }
-
-  .accordion-button:hover {
-    background-color:#e3c505
-  }
-
-  .accordion .accordion-header {
-    background: transparent !important;
-    border: none !important;
-    padding: 0;
-    margin: 20px !important;
-  }
-
-.accordion-button {
-  background-color: transparent !important;
-  border: none !important;
-  font-size: .75em;
-  font: italic;
+html body {
+  background-color: #c0d6df;
 }
 
-.accordion-item {
-  background-color: transparent !important;
-  border: none;
+
+/* CUSTOMIZE THE CAROUSEL 
+SAVED COLOR: #C6E2E9
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 36rem;
+  background-color: #777;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+#no-stretch {
+  height: 100%;
+  width: 100%;
+  opacity: .8;
+}
+
+/* bot chat */
+
+.message-font {
+  font-family: Menlo;
+}
+
+input:placeholder-shown {
+  font-style: italic;
 }
 
 #user-name-style {
-  font-weight: bold;
-  color: #4f6d7a;
+font-weight: bold;
+color: #4f6d7a;
 
 }
 
 #bot-name-style {
-  font-weight: bold;
-  color: #e3c505;
+font-weight: bold;
+color: #dd6e42;
 }
 
 
-  @font-face {
-    font-family: 'helvetica_condensedbold';
-    src: url("/static/fonts/HBC/helvetica_condensed_bold-webfont.woff2") format('woff2'),
-         url("/static/fonts/HBC/helvetica_condensed_bold-webfont.woff") format('woff');
-    font-weight: normal;
-    font-style: normal;
 
+/* festivus  */
+
+#festivus-tagline {
+  color: white !important;
+  font-size: 1.5em !important;
+  opacity: .7;
+}
+
+#festivus-btn {
+  font-weight: bold;
+}
+
+.cover {
+  padding: 0 1.5rem;
+}
+
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+}
+
+
+/* navbar */
+.navbar-brand {
+  margin-left: 10px !important;
+  font-family: 'streamster' !important;
+  font-size: 1.75em;
+  color: #4f6d7a !important;
+  letter-spacing: .06em;
+  text-shadow: 2px 2px 5px #e3c505;
+}
+
+.navbar {
+  box-shadow: 0 2px 40px 0 rgb(0 0 0 / 30%);
+}
+
+
+/* where are they now - Accordion */
+#accordionExample {
+  background-color: transparent !important;
+}
+
+.accordion .accordion-header {
+  background: transparent !important;
+  border: none !important;
+  padding: 0;
+  margin: 20px !important;
+}
+
+.accordion-button {
+background-color: transparent !important;
+border: none !important;
+font-size: .75em;
+font: italic;
+}
+
+.accordion-item {
+background-color: transparent !important;
+border: none;
+}
+
+
+/* hover to yellow */
+a:hover {
+  color:#e3c505;
+}
+
+.btn:hover, #zip-button:hover, #end-convo:hover, #bot-chat-submit-button:hover, .navbar:hover {
+  background-color:#e3c505;
+  color: white;
+}
+
+#festivus-btn:hover {
+  color: #dd6e42;
+}
+
+.navbar-brand:hover, .accordion-button:hover {
+  color:#e3c505 !important;
+}
+
+.navbar-dark:hover .navbar-nav:hover .nav-link:hover {
+  color:#e3c505;
+}
+
+.accordion-button:hover {
+  background-color:#e3c505
+}
+
+
+/* uncategorized */
+#sam-font-2 {
+  font-family: 'streamster';
+  font-size: 5em;
+  color: white;
+  text-shadow: 2px 2px 5px #e3c505;
+  letter-spacing: .02em;
+}
+
+.subpage-header {
+  font-family: 'streamster';
+  font-size: 4em;
+  margin-top: 100px !important;
+  margin-left: 50px !important;
+}
+
+.watn-description {
+padding-left: 50px;
+}
+
+.hp-button, #zip-button, #end-convo, #bot-chat-submit-button {
+  background-color: #4f6d7a;
+  color: white;
+}
+
+h1 {
+  font-size: 1.5em;
+  margin-top: 50px;
+  letter-spacing: .012em;
+  /* text-shadow: 2px 2px 5px #4f6d7a; */
+}
+
+h2 {
+  color: #4f6d7a;
+}
+
+.user-field, .form-select {
+  opacity: .7;
+}
+
+.food-locate-form {
+  align-items: center;
+  }
+
+  .watn-subheader {
+    font-family: 'streamster';
+    font-size: 3.5em;
+    color: white;
+    letter-spacing: 0.12em;
+    text-shadow: 2px 2px 5px #4f6d7a !important;
+    margin-left: 50px;
+    margin-top: 70px;
   }
 
 @font-face {
-  font-family: 'streamster';
-  src: url("static/css/fonts/streamster/Streamster.tff") format('tff');
+  font-family: 'helvetica_condensedbold';
+  src: url("/static/fonts/HBC/helvetica_condensed_bold-webfont.woff2") format('woff2'),
+        url("/static/fonts/HBC/helvetica_condensed_bold-webfont.woff") format('woff');
   font-weight: normal;
   font-style: normal;
 
 }
 
+@font-face {
+font-family: 'streamster';
+src: url("static/css/fonts/streamster/Streamster.tff") format('tff');
+font-weight: normal;
+font-style: normal;
 
-  /* MARKETING CONTENT
-  -------------------------------------------------- */
-  
-  /* Center align the text within the three columns below the carousel */
-  .marketing .col-lg-4 {
-    margin-bottom: 1.5rem;
-    text-align: center;
-  }
-  .marketing h2 {
-    font-weight: 400;
-  }
-  .marketing .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
-  }
-  
-  
-  /* Featurettes
-  ------------------------- */
-  
-  .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-    color: #e3c505;
-    height: 5px !important;
-  }
-  
-  /* Thin out the marketing headings */
-  .featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: -.05rem;
-  }
-  
-  
-  /* RESPONSIVE CSS
-  -------------------------------------------------- */
-  
-  @media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
-    }
-  
-    .featurette-heading {
-      font-size: 50px;
-    }
-  }
-  
-  @media (min-width: 62em) {
-    .featurette-heading {
-      margin-top: 7rem;
-    }
-  }
-  
-/* SEINFOOD */
-
-.food-locate-form {
-  align-items: center;
 }
 
-        /* Links */
-        a,
-        a:focus,
-        a:hover {
-            color: #fff;
-        }
 
-        /* Custom default button */
-        .btn-secondary,
-        .btn-secondary:hover,
-        .btn-secondary:focus {
-            color: #333;
-            text-shadow: none;
-            /* Prevent inheritance from `body` */
-            background-color: #fff;
-            border: .05rem solid #fff;
-        }
+/* MARKETING CONTENT
+-------------------------------------------------- */
 
-        /*
- * Cover
- */
-        .cover {
-            padding: 0 1.5rem;
-        }
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
 
-        .cover .btn-lg {
-            padding: .75rem 1.25rem;
-            font-weight: 700;
-        }
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  color: #e3c505;
+  height: 5px !important;
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+    }
+
+  .featurette-heading {
+    font-size: 50px;
+    }
+  }
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
+
+
+/* Links */
+a,
+a:focus,
+a:hover {
+    color: #fff;
+}
+
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+    color: #333;
+    text-shadow: none;
+    /* Prevent inheritance from `body` */
+    background-color: #fff;
+    border: .05rem solid #fff;
+}
+
+#background-image-gif {
+  background-image: url('static/images/georgeparents.jpg');
+  height: 75vh !important; 
+  background-size: cover !important;
+}
