--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 <title>{% block title %}Countdown to Festivus{% endblock %}</title>
@@ -10,10 +9,14 @@
     <div class="cover-container d-flex h-100 mx-auto flex-column">
 
 
-        <div class="bg-image d-flex justify-content-center align-items-center" style="
-    background-image: url('static/images/georgeparents.jpg');
-    height: 75vh; background-size: cover;
-  ">
+        <div class="bg-image d-flex justify-content-center align-items-center" 
+        id="background-image-gif" 
+        style="
+            background-image: url('static/images/georgeparents.jpg');
+            height: 75vh; 
+            background-size: cover;" 
+        onclick="this.background-image.url('https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif')">
+
             <main role="main" class="inner cover">
                 <h1 id="sam-font-2">Countdown to Festivus</h1>
                 <div id="festivus-tagline">Festivus is December 23rd 2021! <em>Mark your calendar.</em>
@@ -21,17 +24,43 @@
                 <br>
                 <br>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-outline-warning" id="festivus-btn">{{  days_left  }} DAYS LEFT</a>
+                    <a href="#" class="btn btn-lg btn-outline-warning" id="festivus-btn">{{ days_left }} DAYS LEFT</a>
                 </p>
             </main>
         </div>
     </div>
 </div>
-<!-- 
 
+<!-- <script type="text/javascript">
+
+    const changeBackgroundGif = () => {
+
+        if (document.getElementById('#background-image-gif').url === 'static/images/georgeparents.jpg') {
+            document.getElementById('#background-image-gif').url === 'https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif';
+
+        } else if (document.getElementById('#background-image-gif').url === 'https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif') {
+            document.getElementById('#background-image-gif').url === 'static/images/georgeparents.jpg';
+
+        }
+    };
+
+    const daysLeftButton = document.querySelector('#festivus-btn');
+
+    daysLeftButton.addEventListener('click', changeBackgroundGif);
+</script> -->
+
+<!-- 
+https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif
+
+        <div class="bg-image d-flex justify-content-center align-items-center" 
+        id="background-image-gif" 
+        style="
+            background-image: url('static/images/georgeparents.jpg');
+            height: 75vh; 
+            background-size: cover;">
     <div class="countdown">
         <h2 id="festivus-countdown">Festivus is December 23rd 2021!</h2>
         <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
     </div>
-     -->
+    
 {% endblock %}
