--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -21,61 +21,62 @@
 <br>
 <div class="container">
     <div class="float-right">
-        <div class="row">
-            <div class="col-sm-7">
-                <div class="page-description">
-                    <p>The show Seinfeld often uses food as a plot device. Sometimes the
-                        foods sound tasty, or maybe the show is the first time you're hearing
-                        about this type of thing. Use the local search to see where cuisine
-                        and items mentioned on the show are available near you.</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
+        <div class="food-finder">
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="food-locate-form">
-                        <h2>Dine like the characters!</h2>
-                        <br>
-                        <form action="/zip-code">
-                            <label name="your-zip-code">Your zip code: </label>
+                <!-- one giant row for the p, form, photo (and results) -->
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="page-description">
+                            <p>The show Seinfeld often uses food as a plot device. Sometimes the
+                                foods sound tasty, or maybe the show is the first time you're hearing
+                                about this type of thing. Use the local search to see where cuisine
+                                and items mentioned on the show are available near you.</p>
+                            <h2>Dine like the characters!</h2>
                             <br>
-                            <input class="form-control user-field" type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}"
-                                maxlength="5" style="border-radius: 5px">
-
-                            <text name="zip-user-input" id="zip-user-input"></text>
-
-                            <p><em>* Searches within a 10 mile radius</em></p><br>
-                            <input class="form-control" type="submit" value="submit" id="zip-button">
-
-
-                            <br>
-                            <br>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-
-                </div>
+                        </div><!-- end page description -->
+                    </div><!-- end col for pd -->
+                </div><!-- end row for pd -->
                 <div class="col-sm-6">
-                    {% if zip_code_search %}
                     <div class="food-results">
+                    {% if zip_code_search %}
+                    
                         <h2>Places: </h2>
 
                         {% for key, value in dict_of_businesses.items() %}
                         <p>{{ key[0] }}: {{ value[0] }} {{ value[1][0] }}, {{ value[1][1] }}</p>
                         {% endfor %}
 
-                    </div>
+                    
                     {% endif %}
-                    <br>
-                </div>
-            </div>
-        </div>
-        <div id="map">
-        </div>
-    </div>
+                    </div><!-- end div food results -->
+                    
+                    <img src="static/images/jerry george diner.jpeg">
+                </div><!-- end food results col -->
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="food-locate-form">
+                            <form action="/zip-code">
+                                <label name="your-zip-code">Your zip code: </label>
+                                <br>
+                                <input class="form-control user-field" type="text" id="zip-code" name="zip-code"
+                                    pattern="[0-9]{5,5}" maxlength="5" style="border-radius: 5px">
+                                <text name="zip-user-input" id="zip-user-input"></text>
+                                <p><em>* Searches within a 10 mile radius</em></p><br>
+                                <input class="form-control" type="submit" value="submit" id="zip-button">
+                                <br>
+                                <br>
+                            </form>
+                        </div><!-- food locate div ends-->
+                    </div><!-- col 4 ends -->
+                </div><!-- row for zip & end convo ends -->
+                
+            </div><!-- big upper row ends -->
+        </div><!-- food finder div ends -->
+        </div><!-- float right ends -->
+    <div id="map">
+    </div><!-- map ends -->
 </div>
+</div><!-- container ends -->
 {% if zip_code_search %}
 <script type="text/javascript">
     const latLng = {{ business_lat_lng | tojson }}
