--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -11,91 +11,92 @@
 <br>
 <div class="container">
     <div class="float-right">
-    <div class="bot-chat">
-        <div class="row">
-            <h2 id="bot-chat">Chat with a Seinfeld bot!</h3>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="transcript">
-                    <!-- for how many messages are saved in the session, show that many messages with
-                a bot response-->
-                    <!-- user_messages session holds "None" in session upon load, making len=1-->
-                    {% for i in range(user_messages|length) %}
-                    {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name
-                            }}:
-                        </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
-                    {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}:
-                        </span><span class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif
-                    %}{%
-                    endif %}
-                    {% endfor %}
-                </div>
-                <div id="pick-char">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <p>Pick a character:</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <form action="/character-chat">
-                                <select class="form-select user-field" name="character-bot" id="character-select">
-                                    <!-- the character who was sent a chat is automatically selected for the next message in session -->
-                                    <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry</option>
-                                    <option value="George" {% if bot_name=='George' %} selected{% endif %}>George
-                                    </option>
-                                    <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine
-                                    </option>
-                                    <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer
-                                    </option>
-                                </select>
-                                <br>
-                                <br>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <label for="username">Make a username:</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <input class="form-control user-field" type="username" id="username" name="username" {% if
-                                user_name %} placeholder="{{ user_name }}" {% endif %}>
-                            <br>
-                            <br>
-                        </div>
-                    </div><!-- .pick char ends -->
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <input class="form-control user-field" name="user-input" id="user-input"
-                            placeholder="Start typing...">
-                        <br>
-                    </div>
-                    <div class="col-sm-12">
-                        <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                </form>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p><em>*To switch characters, end the conversation.</em></p>
-                    </div>
-                    <div class="col-sm-12">
-                        <form action="/clear" method="GET">
-                            <input class="form-control" type="submit" value="End Chat" id="end-convo">
-                        </form>
-                    </div>
-                </div>
-            </div> <!-- .col-sm-12 end convo note & button -->
-            <div class="col-sm-6">
-                <img src="static/images/jerry comp gif.gif">
+        <div class="bot-chat">
+            <div class="row">
+                <h2 id="bot-chat">Chat with a Seinfeld bot!</h3>
             </div>
-        </div> <!-- .col-sm-6 entire left column ends -->
-    </div> <!-- .row for left side column ends -->
-</div> <!-- .bot-chat ends -->
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="transcript">
+                        <!-- for how many messages are saved in the session, show that many messages with
+                a bot response-->
+                        <!-- user_messages session holds "None" in session upon load, making len=1-->
+                        {% for i in range(user_messages|length) %}
+                        {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name
+                                }}:
+                            </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
+                        {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}:
+                            </span><span class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif
+                        %}{%
+                        endif %}
+                        {% endfor %}
+                    </div>
+                    <div id="pick-char">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <p>Pick a character:</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <form action="/character-chat">
+                                    <select class="form-select user-field" name="character-bot" id="character-select">
+                                        <!-- the character who was sent a chat is automatically selected for the next message in session -->
+                                        <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry
+                                        </option>
+                                        <option value="George" {% if bot_name=='George' %} selected{% endif %}>George
+                                        </option>
+                                        <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine
+                                        </option>
+                                        <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer
+                                        </option>
+                                    </select>
+                                    <br>
+                                    <br>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label for="username">Make a username:</label>
+                            </div>
+                            <div class="col-sm-4">
+                                <input class="form-control user-field" type="username" id="username" name="username" {%
+                                    if user_name %} placeholder="{{ user_name }}" {% endif %}>
+                                <br>
+                                <br>
+                            </div>
+                        </div><!-- .pick char ends -->
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input class="form-control user-field" name="user-input" id="user-input"
+                                placeholder="Start typing...">
+                            <br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                    </form>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <p><em>*To switch characters, end the conversation.</em></p>
+                        </div>
+                        <div class="col-sm-12">
+                            <form action="/clear" method="GET">
+                                <input class="form-control" type="submit" value="End Chat" id="end-convo">
+                            </form>
+                        </div>
+                    </div>
+                </div> <!-- .col-sm-12 end convo note & button -->
+                <div class="col-sm-6">
+                    <img src="static/images/jerry comp gif.gif">
+                </div>
+            </div> <!-- .col-sm-6 entire left column ends -->
+        </div> <!-- .row for left side column ends -->
+    </div> <!-- .bot-chat ends -->
 </div> <!-- .float-right ends -->
 </div> <!-- .container ends -->
 
