--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -21,37 +21,19 @@
 <br>
 <div class="container">
     <div class="float-right">
-        <div class="food-finder">
-            <div class="row">
-                <!-- one giant row for the p, form, photo (and results) -->
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="page-description">
-                            <p>The show Seinfeld often uses food as a plot device. Sometimes the
-                                foods sound tasty, or maybe the show is the first time you're hearing
-                                about this type of thing. Use the local search to see where cuisine
-                                and items mentioned on the show are available near you.</p>
-                            <h2>Dine like the characters!</h2>
-                            <br>
-                        </div><!-- end page description -->
-                    </div><!-- end col for pd -->
-                </div><!-- end row for pd -->
-                <div class="col-sm-6">
-                    <div class="food-results">
-                    {% if zip_code_search %}
-                    
-                        <h2>Places: </h2>
-
-                        {% for key, value in dict_of_businesses.items() %}
-                        <p>{{ key[0] }}: {{ value[0] }} {{ value[1][0] }}, {{ value[1][1] }}</p>
-                        {% endfor %}
-
-                    
-                    {% endif %}
-                    </div><!-- end div food results -->
-                    
-                    <img src="static/images/jerry george diner.jpeg">
-                </div><!-- end food results col -->
+        <div class="row">
+            <!-- one giant row for the p, form, photo (and results) -->
+            <!-- <div class="row"> -->
+            <div class="col-sm-6">
+                <!-- col for left side -->
+                <div class="page-description">
+                    <p>The show Seinfeld often uses food as a plot device. Sometimes the
+                        foods sound tasty, or maybe the show is the first time you're hearing
+                        about this type of thing. Use the local search to see where cuisine
+                        and items mentioned on the show are available near you.</p>
+                    <h2>Dine like the characters!</h2>
+                    <br>
+                </div><!-- end page description -->
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="food-locate-form">
@@ -62,20 +44,35 @@
                                     pattern="[0-9]{5,5}" maxlength="5" style="border-radius: 5px">
                                 <text name="zip-user-input" id="zip-user-input"></text>
                                 <p><em>* Searches within a 10 mile radius</em></p><br>
-                                <input class="form-control" type="submit" value="submit" id="zip-button">
+                                <input class="form-control" type="submit" value="Submit" id="zip-button">
                                 <br>
                                 <br>
                             </form>
                         </div><!-- food locate div ends-->
                     </div><!-- col 4 ends -->
-                </div><!-- row for zip & end convo ends -->
-                
-            </div><!-- big upper row ends -->
-        </div><!-- food finder div ends -->
-        </div><!-- float right ends -->
+                    <div class="col-sm-2">
+                        <!-- blank for spacing -->
+                    </div>
+                </div> <!-- end left side row -->
+            </div><!-- end col for pd left side -->
+            <div class="col-sm-6">
+                <div class="food-results">
+                    {% if zip_code_search %}
+
+                    <h2>Places: </h2>
+
+                    {% for key, value in dict_of_businesses.items() %}
+                    <p>{{ key[0] }}: {{ value[0] }} {{ value[1][0] }}, {{ value[1][1] }}</p>
+                    {% endfor %}
+
+                    {% endif %}
+                </div><!-- end div food results -->
+                <img src="static/images/jerry george diner.jpeg" id="diner-photo" style="width: 450px">
+            </div><!-- end col right side food results col -->
+        </div><!-- big upper row ends -->
+    </div><!-- float right ends -->
     <div id="map">
     </div><!-- map ends -->
-</div>
 </div><!-- container ends -->
 {% if zip_code_search %}
 <script type="text/javascript">
@@ -88,3 +85,17 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu0K1tl63X34gNx4rehOAPA6QfJWNrLjk&callback=initMap">
     </script>
 {% endblock %}
+
+<script type="text/javascript">
+    var url = window.location.href;
+
+    const showResultsNotImage = () => {
+    if (url.includes("zip-code")) {
+        document.getElementById("diner-photo").style.display = "none";
+    }
+};
+
+url.addEventListener('touchstart', showResultsNotImage, {passive: True});
+
+ 
+</script>
