--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -4,13 +4,6 @@
 
 {% block content %}
 
-<style>
-    #map {
-        height: 400px;
-        width: 100%;
-        background-color: grey;
-    }
-</style>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
@@ -21,11 +14,8 @@
 <br>
 <div class="container">
     <div class="float-right">
-        <div class="row">
-            <!-- one giant row for the p, form, photo (and results) -->
-            <!-- <div class="row"> -->
-            <div class="col-sm-6">
-                <!-- col for left side -->
+        <div class="row"><!-- one giant row for the p, form, photo (and results) -->
+            <div class="col-sm-6"><!-- col for left side -->         
                 <div class="page-description">
                     <p>The show Seinfeld often uses food as a plot device. Sometimes the
                         foods sound tasty, or maybe the show is the first time you're hearing
